<resources>
    <string name="app_name">DawaDoz</string>

    <!-- SignIn Activity -->
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="username_required">Please, Enter your username!</string>
    <string name="password_required">PLease, Enter your password!</string>
    <string name="error">Error</string>
    <string name="internet_connection">Wifi and mobile data closed, Open any connection and try again!</string>
    <string name="ok">OK</string>

    <!-- rv_product_item -->
    <string name="product_name">ProductName</string>
    <string name="used_for">Used For</string>
    <string name="company_name">Company Name</string>
    <string name="total_price">Total Price</string>
    <string name="null_item">Item is not found</string>

    <string name="errorResponse">Fail Response</string>
    <string name="tokenFail">Fetching FCM registration token failed</string>
    <string name="wrong_paging">Something wrong!\nPlease, check your network and try again!</string>
    <string name="no_data_found">Something wrong!\nThere exist no data!</string>
</resources>